--- a/campuslife.html
+++ b/campuslife.html
@@ -32,17 +32,11 @@
             and events such as:
           </p>
           <ul>
-            <li>Industrial visit to MIMOS Berhad.</li>
-            <li>FSKTM Tech Conference 2024.</li>
-            <li>Hari Raya Celebration with classmates.</li>
-            <li>Volunteering during campus open day.</li>
+            <li>Participated SAF UTHM FPTV 2025</li>
+            <li>Volunteer Langgam Jiwa by singgah laman</li>
+            <li>Volunteer Pesta Buku UTHM 2025</li>
+            <li>Participated DINS 2025</li>
           </ul>
-          <img
-            src="images/campus1.jpg"
-            alt="Campus Event"
-            width="90%"
-            style="margin-top: 10px; border-radius: 10px"
-          />
         </div>
       </div>
 
